# DnD-Adventurers-Tome-TGBot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: deploy-webapp.yml
api/: auth.py  database.py  dnd-api.service  main.py  requirements.txt
api/routers/: _helpers.py  abilities.py  characters.py  classes.py  currency.py  dice.py  history.py  hp.py  items.py  maps.py  notes.py  sessions.py  spell_slots.py  spells.py  stats.py
api/schemas/: character.py  common.py  item.py  session.py  spell.py
api/tasks/: session_cleanup.py
bot/: __init__.py  main.py
bot/api/: __init__.py  client.py  introspection.py  queries.py  query_builder.py
bot/data/: __init__.py  classes.py  persistence.pkl
bot/db/: __init__.py  engine.py  history.py  models.py
bot/dnd5e/: client.py
bot/handlers/: __init__.py  navigation.py  party.py  start.py  webapp.py  wiki.py  wiki_formatters.py
bot/keyboards/: __init__.py  builder.py  character.py  party.py
bot/locales/: en.yaml  it.yaml
bot/models/: __init__.py  character_state.py  party_state.py  state.py
bot/schema/: __init__.py  registry.py  types.py
bot/utils/: __init__.py  (+4 more)
core/: __init__.py
deploy/: cloudflared.service  deploy.sh  setup-cloudflare-tunnel.sh
docs/: README.it.md  _config.yml  index.html
old_bot/: DB.pkl
scripts/: parse_class_progression.py
webapp/: .env.local.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+2646 files in other folders)
