[project]
name = "dnd-bot-revamped"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Bot
    "python-telegram-bot[callback-data]>=22.0",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    # Shared
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.26",
]
